--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,18 @@
-  <!-- Footer -->
-  
-  <footer class="footer mt-4">
-    <div class="container-md shadow-lg text text-center">
+<!-- Footer -->
 
-      <span class="text-muted">I like to do a lot of cool stuff and I might eventually get around to making more websites for the other things I do. If that happens, I'll put links here.</span>
+<div class="container-fluid">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+
+      <span class="mb-3 mb-md-0 text-muted">Copyright © {{ site.author }} | {{ site.time | date: "%Y" }}</span>
 
     </div>
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#github"></use></svg></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#twitter"></use></svg></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#linkedIn"></use></svg></a></li>
+
+    </ul>
   </footer>
+</div>
