--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,35 +1,33 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
+<nav class="navbar" aria-label="First navbar example">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">{{ site.title }}</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="/index.html">{{ site.author }}</a>
+      <button class="navbar-toggler collapsed border border-4 border-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExample02">
-        <ul class="navbar-nav me-auto">
+      <div class="navbar-collapse collapse justify-content-center bg-transparent" id="navbarsExample01">
+        <nav class="navbar-nav nav-fill flex-row justify-content-center me-auto mb-2">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/blog/index.html">Blog</a>
+            <a class="nav-link" href="/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About Me</a>
+            <a class="nav-link" href="/projects/index.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact Me</a>
+            <a class="nav-link" href="/writing/index.html">Writings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/projects.html">My Projects</a>
+            <a class="nav-link" href="https://github.com/EvanYohe">Github</a>
           </li>
-        </ul>
-
-<!--
-        <form role="search">
-          <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-        </form>
--->
-
+          <li class="nav-item">
+            <a class="nav-link" href="https://linkedin.com/in/evan-yohe">LinkedIn</a>
+          </li>
+        </nav>
       </div>
     </div>
   </nav>
+
+  <hr class="bg-danger border-2 border-top border-danger m-2 shadow-lg">
