--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,16 +8,16 @@
       <div class="navbar-collapse collapse justify-content-center bg-transparent" id="navbarsExample01">
         <nav class="navbar-nav nav-fill flex-row justify-content-center me-auto mb-2">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="{{site.baseurl}}/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="{{site.baseurl}}/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/projects/index.html">Projects</a>
+            <a class="nav-link" href="{{site.baseurl}}/projects/index.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/writing/index.html">Writings</a>
+            <a class="nav-link" href="{{site.baseurl}}/writing/index.html">Writings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/EvanYohe">Github</a>
