--- a/_includes/teel.html
+++ b/_includes/teel.html
@@ -1,11 +1,13 @@
+<script type="text/javascript" src="/assets/js/main.js"></script>
+
 <div class="container-fluid">
     <div class="row m-2">
         <div class="col">
 
             <div class="form-outline">
-                <input type="search" id="searchbar" class="form-control" placeholder="Search" aria-label="Search" />
+                <input type="input" id="searchbar" class="form-control" placeholder="Search" aria-label="Search"/>
               </div>
-
+              
         </div>
     </div>
 </div>
