--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,50 +1,30 @@
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
-
-        <div class="container">
-          <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p>Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-          </div>
-        </div>
+<div id="carouselExampleIndicators" class="carousel carousel-dark slide">
+  <div class="row">
+    <div id="carouselInner" class="carousel-inner">
+      <div id="carouselOne"class="carousel-item active">
+        <p id="paraOne" class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, vero. Iusto delectus voluptas optio labore perferendis numquam autem quidem earum nihil sunt! Consectetur, earum fugit illum maxime ducimus sapiente, nulla, sit iure magni non corporis vel cum. Unde nam voluptas maxime asperiores est quisquam iure quibusdam atque laboriosam. Natus, laudantium, in porro earum hic optio repellendus dignissimos sed, blanditiis quo ad nobis soluta. Officia ipsa exercitationem atque harum magnam corrupti incidunt veritatis veniam, architecto voluptatibus, voluptatem sequi deserunt repellendus consequatur! Distinctio, doloribus. Impedit magni, ab ratione ex, odio vitae, recusandae qui commodi repellat numquam delectus illo excepturi debitis distinctio harum.</p>
+        <p id="paraTwo" class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt quas, hic similique neque sapiente repudiandae corrupti iste consequatur ad ut sed id amet aut assumenda!</p>
+        <p id="paraThree" class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste culpa necessitatibus unde adipisci! Corporis architecto deleniti esse vitae nesciunt provident excepturi perspiciatis voluptatum consequatur expedita?</p>
+  
       </div>
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
-
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-          </div>
-        </div>
+      <div id="carouselTwo"class="carousel-item">
+        <p id="paraOne" class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, vero. Iusto delectus voluptas optio labore perferendis numquam autem quidem earum nihil sunt! Consectetur, earum fugit illum maxime ducimus sapiente, nulla, sit iure magni non corporis vel cum. Unde nam voluptas maxime asperiores est quisquam iure quibusdam atque laboriosam. Natus, laudantium, in porro earum hic optio repellendus dignissimos sed, blanditiis quo ad nobis soluta. Officia ipsa exercitationem atque harum magnam corrupti incidunt veritatis veniam, architecto voluptatibus, voluptatem sequi deserunt repellendus consequatur! Distinctio, doloribus. Impedit magni, ab ratione ex, odio vitae, recusandae qui commodi repellat numquam delectus illo excepturi debitis distinctio harum.</p>
+        <p id="paraTwo" class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt quas, hic similique neque sapiente repudiandae corrupti iste consequatur ad ut sed id amet aut assumenda!</p>
+        <p id="paraThree" class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste culpa necessitatibus unde adipisci! Corporis architecto deleniti esse vitae nesciunt provident excepturi perspiciatis voluptatum consequatur expedita?</p>
+  
       </div>
-      <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
-
-        <div class="container">
-          <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-          </div>
-        </div>
+      <div id="carouselThree"class="carousel-item">
+        <p id="paraOne" class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, vero. Iusto delectus voluptas optio labore perferendis numquam autem quidem earum nihil sunt! Consectetur, earum fugit illum maxime ducimus sapiente, nulla, sit iure magni non corporis vel cum. Unde nam voluptas maxime asperiores est quisquam iure quibusdam atque laboriosam. Natus, laudantium, in porro earum hic optio repellendus dignissimos sed, blanditiis quo ad nobis soluta. Officia ipsa exercitationem atque harum magnam corrupti incidunt veritatis veniam, architecto voluptatibus, voluptatem sequi deserunt repellendus consequatur! Distinctio, doloribus. Impedit magni, ab ratione ex, odio vitae, recusandae qui commodi repellat numquam delectus illo excepturi debitis distinctio harum.</p>
+        <p id="paraTwo" class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt quas, hic similique neque sapiente repudiandae corrupti iste consequatur ad ut sed id amet aut assumenda!</p>
+        <p id="paraThree" class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste culpa necessitatibus unde adipisci! Corporis architecto deleniti esse vitae nesciunt provident excepturi perspiciatis voluptatum consequatur expedita?</p>
+  
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
+  <div class="row">
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">Previous</button>
+      <button type="button" class="btn btn-primary" data-bs-target="#carouselExampleIndicators" data-bs-slide="next"> Next</button>
+    </div>
+  </div>
+</div>
