--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<div class="container-fluid"> <!--  border border-2 shadow-2 -->
+<div class="container-fluid m-2"> <!--  border border-2 shadow-2 -->
     <div class="row"> <!-- Image -->
 
         <img src="" class="" alt="">
