--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 
 <div class="container-fluid">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center m-2 border-top">
       <div class="col-md-4 d-flex align-items-center">
   
         <span class="mb-3 mb-md-0 text-muted">Copyright © {{ site.author }} | {{ site.time | date: "%Y" }}</span>
