--- a/_includes/sticky.html
+++ b/_includes/sticky.html
@@ -1,4 +1,4 @@
-<!-- Footer -->
+<!-- Sticky Footer -->
 
 <div class="container-fluid fixed-bottom">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
