--- a/_includes/taglist.html
+++ b/_includes/taglist.html
@@ -1,73 +1,54 @@
 <div class="container-fluid">
     <div class="row m-2">
-        <div class="col">
+        <div class="col d-grid-block" id="tagHook">
             {% for tag in site.tags %}
-
-                <a href="#{{ tag[0] }}" type="button" data-bs-toggle="collapse" data-bs-target="WRITE IN HERE" aria-expanded="false" aria-controls="collapseExample">{{ tag[0] }} {{ tag[0] | size }}</a><br>
-
+            {% assign post = tag | last %} 
+            
+            <a class="p-2" href="#{{ tag[0] }}" type="button" data-bs-toggle="collapse" data-bs-target="#{{ tag[0] }}" aria-expanded="false" aria-controls="collapseExample">{{ tag[0] }}</a>
+            
             {% endfor %}
+            <script type="text/javascript" src="/assets/js/throwlist.js"></script>
         </div>
     </div>
 </div>
 
-<div class="container-fluid">
-    <div class="row m-2">
-        <div class="col text-nowrap">
+<hr class="m-2"/>
 
-            <h4>Post List</h4>
-
-        </div>
-        <div class="col d-flex justify-content-end">
-
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#hideTagList" aria-expanded="false" aria-controls="collapseExample">
-
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                </svg>
-
+<div class="accordion" id="accordionOuter">
+    <div class="accordion-item">
+        <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOuter" aria-expanded="true" aria-controls="TODO">
+            Post List By Tag
             </button>
+        </h2>
+        <div id="collapseOuter" class="accordion-collapse collapse show" aria-labelledby="TODO" data-bs-parent="#accordionOuter">
+            <div class="accordion-flush" id="accordionInner">
 
-        </div>
-    </div>
-</div>
-
-    <hr class="m-2"/>
-
-<div class="collapse show m-2" id="hideTagList">
-
-    {% for tag in site.tags %} <!-- Select a tag -->
-
-    <div class="container-fluid border border-1 border-primary p-2 m-2">
-        
-        <div class="row"> <!-- Tag title and button-->
-
-            <div class="col"><h4 href="#{{ tag[0] }}" class="text-nowrap" id="{{ tag[0] | slugify }}">{{ tag[0] }}</h4></div>
-
-            <div class="col d-flex justify-content-end">
-
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#hideTag{{ tag[0] | slugify }}" aria-expanded="false" aria-controls="collapseExample">
-                    
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                    </svg>
-                    
-                </button>
-
+                {% for tag in site.tags %} <!-- Select a tag -->
+                {% assign post = tag | last %}
+            
+                <div class="accordion-item" id="wrap{{ tag[0] }}">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#{{ tag[0] }}" aria-expanded="true" aria-controls="TODO">
+                            {{ post | size }} | {{ tag[0] }}
+                        </button>
+                    </h2>
+                    <div id="{{ tag[0] }}" class="accordion-collapse collapse" aria-labelledby="TODO">
+                        <div class="accordion-body list-unstyled">
+                
+                            {% for post in tag[1] %}  <!-- Select a post from tag -->
+                
+                            <li><a class="post-title" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }} | {{ post.date | date_to_string }}</a></li>
+                
+                            {% endfor %}
+                
+                        </div>
+                    </div>
+                </div>
+            
+                {% endfor %}
+            
             </div>
-
         </div>
-        <ul class="collapse" id="hideTag{{ tag[0] | slugify }}"> <!-- -->
-
-        {% for post in tag[1] %}  <!-- Select a post from tag -->
-
-            <li><a class="post-title" href="{{ site.baseurl }}{{ post.url }}">{{ post.title }} | {{ post.date | date_to_string }}</a></li>
-
-        {% endfor %}
-
-        </ul>
     </div>
-
-    {% endfor %}
-
-</div>
 </div>
