--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,24 @@
 ---
-layout: default
+layout: page
 ---
-
 <div class="container-fluid">
+    <div class="row m-2">
+        <div class="btn-group" href="#" role="group">
+            <a type="button" href="/writing/index.html" class="btn border border-primary border-3 rounded-0 d-block">Go back</a>
+            <a type="button" href="" class="btn border border-primary border-3 rounded-0 d-block">Next Post</a>
+        </div>
+        <div class="row text-center"><span>If you liked this post, you'll also enjoy...</span></div>
+    </div>
 
     <div class="row m-2">
-        <div class="col-8">
+        <div class="col-sm-8">
 
             {{ content }}
 
+            <a type="button" href="#" class="btn border border-primary border-3 rounded-0 d-block">Back to top</a>
+
         </div>
-        <div class="col-4 text-center">
+        <div class="col-sm-4 text-center">
 
             {% include sidebar.html %}
 
