--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: page
         </div>
         <div class="col-sm-4 text-center">
 
-            {% include sidebar.html %}
+            {% include taglist.html %}
 
         </div>
     </div>
