--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,16 +2,16 @@
 
 <div class="container-fluid">
     <footer class="d-flex flex-wrap justify-content-between align-items-center m-2 border-top">
-      <div class="col-md-4 d-flex align-items-center">
+      <div class="col-md-4 d-flex">
   
-        <span class="mb-3 mb-md-0 text-muted">Copyright © {{ site.author }} | {{ site.time | date: "%Y" }}</span>
+        <div class="text-muted">Copyright © {{ site.author }} | {{ site.time | date: "%Y" }}</div>
   
       </div>
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-  
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#github"></use></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#twitter"></use></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#linkedIn"></use></svg></a></li>
+      <ul class="nav col-md-4 justify-content-end align-items-center list-unstyled d-flex">
+
+        <li class="me-3"><a href="https://github.com/EvanYohe"><i class="bi-github" style="font-size: 1rem; color: #000;"></i></a></li>
+        <li class="me-3"><a href="#"><i class="bi-twitter" style="font-size: 1rem; color: #000;"></i></a></li>
+        <li class="me-3"><a href="https://linkedin.com/in/evan-yohe"><i class="bi-linkedin" style="font-size: 1rem; color: #000;"></i></a></li>
   
       </ul>
     </footer>
