--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
-<nav class="navbar" aria-label="First navbar example">
+<nav class="navbar" aria-label="TODO">
     <div class="container-fluid">
       <a class="navbar-brand" href="/index.html">{{ site.author }}</a>
-      <button class="navbar-toggler collapsed border border-4 border-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler collapsed border border-4 border-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample01" aria-controls="TODO" aria-expanded="false" aria-label="TODO">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -14,7 +14,7 @@
             <a class="nav-link" href="{{site.baseurl}}/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{site.baseurl}}/projects/index.html">Projects</a>
+            <a class="nav-link disabled" href="#">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{site.baseurl}}/writing/index.html">Writings</a>
