--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,54 +1,36 @@
 <!doctype html>
-
 <html lang="en">
 
     <head>
 
-<!-- Favicon -->
-
-<!-- Required meta tags -->
-
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="alternate" type="application/rss+xml"  href="{{ site.url }}/feed.xml" title="{{ site.title }}">
+        <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml" title="{{ site.title }}">
 
-<!-- Informational meta tags -->
-
-        <meta name="description" content="{{ site.description }}">
-        <meta name="keywords" content="{{ site.keywords }}">
+        <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+        <meta name="keywords" content="{% if page.keywords %}{{ page.keywords | join: " " }}{% else %}{{ site.keywords | join: " " }}{% endif %}">
         <meta name="author" content="{{ site.author }}">
 
-<!-- Bootstrap CSS & JS -->
-
-        <link href="/assets/css/main.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="{{ site.url }}/assets/css/main.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-        <title>{{ site.title }}</title>
+        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
     </head>
-
-<!-- Navbar -->
-
     <header>
 
-        {% include navbar.html %}
+        {% if page.autonav == true %}{% include autonavbar.html %}{% elsif page.url == "/" %}<div></div></div>{% else %}{% include navbar.html %}{% endif %}
 
     </header>
-
-<!-- Body -->
-
     <body>
         
         {{ content }}
 
     </body>
-
     <footer>
 
         {% include footer.html %}
 
     </footer>
-
 </html>
