--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,9 @@
 // Pick from a list of style sets
 
-// Set A
-$primary    : #ffa56a;
-$secondary  : #CCCCCC;
-$body-bg    : #beffe6;
+// // Set A
+// $primary                : #ffa56a;
+// $secondary              : #ffffff;
+// $body-bg                : #00ff9d;
 
 // Set B
 // $primary    : #ffa56a;
@@ -22,3 +22,10 @@ $body-bg    : #beffe6;
 
 // Include default variable overrides above this import
 @import "../css/bootstrap/bootstrap";
+
+.headshot {
+    
+    max-height          : 482.66px;
+    max-width           : 386px;
+    
+}
